tests/FSharp.Analyzers.Tests/data/string/lastindexof/negative/String Int32 Int32 StringComparison.fs
module M

open System
"foo".LastIndexOf("f",0,1,StringComparison.InvariantCulture)
